--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,7 @@ body
 .sign-window {
   padding: 4em;
   max-width: 45em;
-  background: linear-gradient(140deg, hsla(157, 100%, 50%, 1) 0%, hsla(217, 100%, 37%, 1) 100%);
+  background: linear-gradient(140deg, hsla(157, 100%, 50%, 1) 0%, rgb(0, 48, 126) 100%);
   box-shadow: 0px 10px 30px 6px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
 }
@@ -43,4 +43,18 @@ body
 
 .sign-grid {
   padding: 8px;
+}
+
+.backgroundVideo {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
