--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,18 @@
 html,
-body
-{
-  margin: 0;
+body {
+  margin: 0 auto;
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
+  background: #000000;
 }
 
 .fullscreen-container {
@@ -57,4 +65,29 @@ body
   left: 0;
   right: 0;
   z-index: -1;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: #fff;
+  z-index: 6;
+}
+
+.hover-underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transform-origin: bottom right;
+  transition: transform 0.5s ease-out;
+}
+
+.hover-underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
