--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,11 @@ body {
 }
 
 .qrcode {
+  background-color: #fff;
+  height:auto;
+  width: auto;
+  padding: 20px;
+  border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
 }
